[gd_scene load_steps=4 format=3 uid="uid://kd6sq4sel777"]

[ext_resource type="Script" path="res://scripts/MatchManager.gd" id="1_yg6nh"]
[ext_resource type="PackedScene" uid="uid://b2njgew7dr5vd" path="res://scenes/components/PlayerManager.tscn" id="3_knqy3"]
[ext_resource type="PackedScene" uid="uid://jq0khrojff0e" path="res://scenes/components/DeckManager.tscn" id="3_nwupo"]

[node name="MatchManager" type="Node"]
script = ExtResource("1_yg6nh")

[node name="DecksManager" parent="." instance=ExtResource("3_nwupo")]

[node name="PlayerManager" parent="." instance=ExtResource("3_knqy3")]
